--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Culinary Compass</h1>
+        <h1>Culinar Compass</h1>
     </header>
     <main>
         <div class="search-container">
